--- a/Experiment/Overlay.ipynb
+++ b/Experiment/Overlay.ipynb
@@ -213,140 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "1ef2135b-bb21-4b0a-bc17-aa314406043c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>@ Condensed Scordite [7]</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Condensed Scardite</td>\n",
-       "      <td>25,984</td>\n",
-       "      <td>3,897 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Condensed Scordite</td>\n",
-       "      <td>23,266</td>\n",
-       "      <td>3,489 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Condensed Scordite</td>\n",
-       "      <td>20,878</td>\n",
-       "      <td>3,130 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Condensed Scordite</td>\n",
-       "      <td>19,114</td>\n",
-       "      <td>2,867 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Condensed Scordite</td>\n",
-       "      <td>17,216</td>\n",
-       "      <td>2,582 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Condensed Scordite</td>\n",
-       "      <td>16,387</td>\n",
-       "      <td>2,458 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Condensed Scordite</td>\n",
-       "      <td>14,068</td>\n",
-       "      <td>2,118 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>@ Scordite [4]</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Scordite</td>\n",
-       "      <td>52,206</td>\n",
-       "      <td>7,838 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Scordite</td>\n",
-       "      <td>26,686</td>\n",
-       "      <td>4,002 m3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Scordite</td>\n",
-       "      <td>21,043</td>\n",
-       "      <td>3,156 m3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            0       1         2\n",
-       "0    @ Condensed Scordite [7]                  \n",
-       "1          Condensed Scardite  25,984  3,897 m3\n",
-       "2          Condensed Scordite  23,266  3,489 m3\n",
-       "3          Condensed Scordite  20,878  3,130 m3\n",
-       "4          Condensed Scordite  19,114  2,867 m3\n",
-       "5          Condensed Scordite  17,216  2,582 m3\n",
-       "6          Condensed Scordite  16,387  2,458 m3\n",
-       "7          Condensed Scordite  14,068  2,118 m3\n",
-       "8              @ Scordite [4]                  \n",
-       "9                    Scordite  52,206  7,838 m3\n",
-       "10                   Scordite  26,686  4,002 m3\n",
-       "11                   Scordite  21,043  3,156 m3"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "frames = []\n",
     "\n",
     "for i in range(12):\n",
     "    frame = {}\n",
-    "    for j in range(3):\n",
+    "    for j in range(0, 4):\n",
     "        \n",
     "        cell = cell_dims_from_list(list(cells[j, i]))\n",
     "        cell_image = images[0].crop(cell)\n",
