--- a/Experiment/SurveyScanResultsInit.ipynb
+++ b/Experiment/SurveyScanResultsInit.ipynb
@@ -442,15 +442,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
+   "id": "8bf7c94a-24e2-403a-9c0c-83b15efce9d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "c07ea4d0-1e8d-4458-b2c8-00dd3ba615d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyautogui.moveTo(df['click_target'][5])\n",
-    "pyautogui.keyDown('ctrl')\n",
-    "pyautogui.click()\n",
-    "pyautogui.keyUp('ctrl')"
+    "time.sleep(0.5)\n",
+    "for i in range(1, 5):\n",
+    "    pyautogui.moveTo(df['click_target'][i])\n",
+    "    pyautogui.keyDown('ctrl')\n",
+    "    pyautogui.click()\n",
+    "    pyautogui.keyUp('ctrl')\n",
+    "    time.sleep(0.5)\n",
+    "\n",
+    "for i in range(1, 3):\n",
+    "    pyautogui.moveTo(df['click_target'][i])\n",
+    "    pyautogui.click()\n",
+    "    time.sleep(0.5)"
    ]
   },
   {
