--- a/Experiment/InventoryInit.ipynb
+++ b/Experiment/InventoryInit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "3d896b79-fa99-487f-8c98-aa80945fc7e4",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "de890bd6-308e-414b-b2da-17748bff5336",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
     "        img = Image.fromarray(img)\n",
     "        return img\n",
     "\n",
-    "def get_survey_scan_results_box():\n",
+    "def get_cargo_box():\n",
     "    return [372, 638, 630, 643] #x,y Top Left ,x,y Bottom Right\n",
     "\n",
     "def convert_to_baw(img):\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "5bdde815-165c-4b2b-b7b0-e916a1a1efa0",
    "metadata": {},
    "outputs": [
@@ -75,20 +75,20 @@
        "<PIL.Image.Image image mode=1 size=258x5>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "full_screen_image = get_screen()\n",
-    "img = convert_to_baw(full_screen_image.crop(get_survey_scan_results_box()))\n",
+    "img = convert_to_baw(full_screen_image.crop(get_cargo_box()))\n",
     "img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "011dbd4c-0868-4fc9-bd29-61fd86830f75",
    "metadata": {},
    "outputs": [
