--- a/Experiment/extract_test.ipynb
+++ b/Experiment/extract_test.ipynb
@@ -173,16 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "867c81e7-6653-4d3d-92f3-9801b6c7b58a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mine_till_full():\n",
-    "    cargo_percent = game.get_cargo_data(refresh_screen=True)\n",
-    "    print(f'Cargo {cargo_percent:.2f}')\n",
-    "    \n",
     "    while True:\n",
+    "        cargo_percent = game.get_cargo_data(refresh_screen=True)\n",
+    "        print(f'Cargo {cargo_percent:.2f}')\n",
     "        if cargo_percent > 0.9:\n",
     "            target = 'Home'\n",
     "            print(f'Navigating to {target}')\n",
@@ -226,12 +225,15 @@
     "            xy = (xy[0], xy[1]-200)\n",
     "            pyautogui.moveTo(xy)\n",
     "            print('started...')\n",
-    "            time.sleep(175)     "
+    "            time.sleep(175)    \n",
+    "        else:\n",
+    "            print('skipping...')\n",
+    "            time.sleep(175)           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7598de42-cbde-4ad9-aa2d-2e085844eef8",
    "metadata": {},
    "outputs": [
@@ -239,156 +241,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cargo 0.09\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n",
-      "cp1\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmine_till_full\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[9], line 21\u001b[0m, in \u001b[0;36mmine_till_full\u001b[1;34m()\u001b[0m\n\u001b[0;32m     19\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m60\u001b[39m)\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m scan_df \u001b[38;5;241m=\u001b[39m \u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_survey_scan_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrefresh_screen\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextract_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbool\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcp1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     23\u001b[0m snap_df \u001b[38;5;241m=\u001b[39m scan_df[scan_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQuantity\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m][\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m2\u001b[39m]\n",
-      "File \u001b[1;32mO:\\source\\repos\\EVE-Online-Bot\\MiningBot\\EveInterface\\Interface.py:157\u001b[0m, in \u001b[0;36mInterface.get_survey_scan_data\u001b[1;34m(self, rows, refresh_screen, extract_type)\u001b[0m\n\u001b[0;32m    154\u001b[0m cells \u001b[38;5;241m=\u001b[39m get_cells(x_range, y_range)\n\u001b[0;32m    156\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m refresh_screen:\n\u001b[1;32m--> 157\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscreen \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_screen\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    159\u001b[0m extract_columns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLocked\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOre\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQuantity\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVolume\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDistance\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclick_target\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m    161\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[1;32mO:\\source\\repos\\EVE-Online-Bot\\MiningBot\\EveInterface\\Interface.py:146\u001b[0m, in \u001b[0;36mInterface.get_screen\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    137\u001b[0m monitor \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m    138\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtop\u001b[39m\u001b[38;5;124m\"\u001b[39m: mon[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtop\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m    139\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m\"\u001b[39m: mon[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    142\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmon\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonitor_number\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m    143\u001b[0m }\n\u001b[0;32m    145\u001b[0m \u001b[38;5;66;03m# Grab the data\u001b[39;00m\n\u001b[1;32m--> 146\u001b[0m img \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[43msct\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrab\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmonitor\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m    147\u001b[0m img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(img, cv2\u001b[38;5;241m.\u001b[39mCOLOR_BGR2RGB)\n\u001b[0;32m    148\u001b[0m img \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mfromarray(img)\n",
-      "File \u001b[1;32mD:\\source\\repos\\venv\\Python310\\lib\\site-packages\\mss\\base.py:76\u001b[0m, in \u001b[0;36mMSSBase.grab\u001b[1;34m(self, monitor)\u001b[0m\n\u001b[0;32m     68\u001b[0m     monitor \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     69\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m\"\u001b[39m: monitor[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     70\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtop\u001b[39m\u001b[38;5;124m\"\u001b[39m: monitor[\u001b[38;5;241m1\u001b[39m],\n\u001b[0;32m     71\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m\"\u001b[39m: monitor[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m-\u001b[39m monitor[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     72\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mheight\u001b[39m\u001b[38;5;124m\"\u001b[39m: monitor[\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m-\u001b[39m monitor[\u001b[38;5;241m1\u001b[39m],\n\u001b[0;32m     73\u001b[0m     }\n\u001b[0;32m     75\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m lock:\n\u001b[1;32m---> 76\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_grab_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmonitor\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mD:\\source\\repos\\venv\\Python310\\lib\\site-packages\\mss\\windows.py:267\u001b[0m, in \u001b[0;36mMSS._grab_impl\u001b[1;34m(self, monitor)\u001b[0m\n\u001b[0;32m    264\u001b[0m     MSS\u001b[38;5;241m.\u001b[39mbmp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgdi32\u001b[38;5;241m.\u001b[39mCreateCompatibleBitmap(srcdc, width, height)\n\u001b[0;32m    265\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgdi32\u001b[38;5;241m.\u001b[39mSelectObject(memdc, MSS\u001b[38;5;241m.\u001b[39mbmp)\n\u001b[1;32m--> 267\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgdi32\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mBitBlt\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    268\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmemdc\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    269\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    270\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    271\u001b[0m \u001b[43m    \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    272\u001b[0m \u001b[43m    \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    273\u001b[0m \u001b[43m    \u001b[49m\u001b[43msrcdc\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    274\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmonitor\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mleft\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    275\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmonitor\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtop\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    276\u001b[0m \u001b[43m    \u001b[49m\u001b[43mSRCCOPY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m|\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mCAPTUREBLT\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    277\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    278\u001b[0m bits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgdi32\u001b[38;5;241m.\u001b[39mGetDIBits(\n\u001b[0;32m    279\u001b[0m     memdc, MSS\u001b[38;5;241m.\u001b[39mbmp, \u001b[38;5;241m0\u001b[39m, height, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_bmi, DIB_RGB_COLORS\n\u001b[0;32m    280\u001b[0m )\n\u001b[0;32m    281\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m bits \u001b[38;5;241m!=\u001b[39m height:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Cargo 0.15\n",
+      "starting 2x...\n",
+      "started...\n",
+      "skipping...\n",
+      "skipping...\n",
+      "starting 2x...\n",
+      "started...\n",
+      "skipping...\n",
+      "starting 2x...\n",
+      "started...\n",
+      "skipping...\n",
+      "starting 2x...\n",
+      "started...\n",
+      "skipping...\n",
+      "starting 2x...\n",
+      "started...\n"
      ]
     }
    ],
    "source": [
-    "mine_till_full()"
+    "while True:\n",
+    "    find_Mining_spot()\n",
+    "    mine_till_full()\n",
+    "    \n",
+    "    pyautogui.moveTo(300 - monitor_x_offset, 626 - monitor_y_offset)\n",
+    "    time.sleep(0.1)\n",
+    "    pyautogui.dragTo(790 - monitor_x_offset, 913 - monitor_y_offset, 1,  button='left')\n",
+    "    time.sleep(0.1)\n",
+    "    pyautogui.moveTo(336 - monitor_x_offset, 672 - monitor_y_offset)\n",
+    "    time.sleep(0.1)\n",
+    "    pyautogui.dragTo(182 - monitor_x_offset, 811 - monitor_y_offset, 1,  button='left')\n",
+    "    time.sleep(0.1)\n",
+    "    pyautogui.moveTo(1757 - monitor_x_offset, 378 - monitor_y_offset)\n",
+    "    time.sleep(0.1)\n",
+    "    pyautogui.click(button='left')\n",
+    "\n",
+    "    time.sleep(60)"
    ]
   },
   {
