--- a/Experiment/extract_test.ipynb
+++ b/Experiment/extract_test.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "867c81e7-6653-4d3d-92f3-9801b6c7b58a",
    "metadata": {},
    "outputs": [],
@@ -184,6 +184,7 @@
     "        print(f'Cargo {cargo_percent:.2f}')\n",
     "        if cargo_percent > 0.9:\n",
     "            target = 'Home'\n",
+    "            location_df = game.get_location_data(refresh_screen=True)\n",
     "            print(f'Navigating to {target}')\n",
     "            xy = location_df.loc[location_df['Name'] == target, 'click_target'].values[0]\n",
     "            pyautogui.moveTo(xy)\n",
@@ -222,7 +223,7 @@
     "                time.sleep(0.1)\n",
     "                pyautogui.press(f'f{i + 1}')\n",
     "                time.sleep(1)\n",
-    "            xy = (xy[0], xy[1]-200)\n",
+    "            xy = (1, 1)\n",
     "            pyautogui.moveTo(xy)\n",
     "            print('started...')\n",
     "            time.sleep(175)    \n",
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7598de42-cbde-4ad9-aa2d-2e085844eef8",
    "metadata": {},
    "outputs": [
@@ -241,22 +242,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cargo 0.15\n",
-      "starting 2x...\n",
-      "started...\n",
-      "skipping...\n",
-      "skipping...\n",
-      "starting 2x...\n",
-      "started...\n",
-      "skipping...\n",
-      "starting 2x...\n",
-      "started...\n",
-      "skipping...\n",
-      "starting 2x...\n",
-      "started...\n",
-      "skipping...\n",
-      "starting 2x...\n",
-      "started...\n"
+      "Navigating to Site One Alpha\n",
+      "scanning...\n",
+      "Cargo 0.93\n",
+      "Navigating to Home\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'monitor_x_offset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m find_Mining_spot()\n\u001b[0;32m      3\u001b[0m mine_till_full()\n\u001b[1;32m----> 5\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mmoveTo(\u001b[38;5;241m300\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[43mmonitor_x_offset\u001b[49m, \u001b[38;5;241m626\u001b[39m \u001b[38;5;241m-\u001b[39m monitor_y_offset)\n\u001b[0;32m      6\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m0.1\u001b[39m)\n\u001b[0;32m      7\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mdragTo(\u001b[38;5;241m790\u001b[39m \u001b[38;5;241m-\u001b[39m monitor_x_offset, \u001b[38;5;241m913\u001b[39m \u001b[38;5;241m-\u001b[39m monitor_y_offset, \u001b[38;5;241m1\u001b[39m,  button\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'monitor_x_offset' is not defined"
      ]
     }
    ],
@@ -265,15 +265,15 @@
     "    find_Mining_spot()\n",
     "    mine_till_full()\n",
     "    \n",
-    "    pyautogui.moveTo(300 - monitor_x_offset, 626 - monitor_y_offset)\n",
+    "    pyautogui.moveTo(get_processed_cords(300,626))\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.dragTo(790 - monitor_x_offset, 913 - monitor_y_offset, 1,  button='left')\n",
+    "    pyautogui.dragTo(get_processed_cords(790,913), 1,  button='left')\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.moveTo(336 - monitor_x_offset, 672 - monitor_y_offset)\n",
+    "    pyautogui.moveTo(get_processed_cords(336,672))\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.dragTo(182 - monitor_x_offset, 811 - monitor_y_offset, 1,  button='left')\n",
+    "    pyautogui.dragTo(get_processed_cords(182,811), 1,  button='left')\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.moveTo(1757 - monitor_x_offset, 378 - monitor_y_offset)\n",
+    "    pyautogui.moveTo(get_processed_cords(1757,378))\n",
     "    time.sleep(0.1)\n",
     "    pyautogui.click(button='left')\n",
     "\n",
