--- a/Experiment/extract_test.ipynb
+++ b/Experiment/extract_test.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7598de42-cbde-4ad9-aa2d-2e085844eef8",
    "metadata": {},
    "outputs": [
@@ -245,18 +245,29 @@
       "Navigating to Site One Alpha\n",
       "scanning...\n",
       "Cargo 0.93\n",
-      "Navigating to Home\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'monitor_x_offset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m find_Mining_spot()\n\u001b[0;32m      3\u001b[0m mine_till_full()\n\u001b[1;32m----> 5\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mmoveTo(\u001b[38;5;241m300\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[43mmonitor_x_offset\u001b[49m, \u001b[38;5;241m626\u001b[39m \u001b[38;5;241m-\u001b[39m monitor_y_offset)\n\u001b[0;32m      6\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m0.1\u001b[39m)\n\u001b[0;32m      7\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mdragTo(\u001b[38;5;241m790\u001b[39m \u001b[38;5;241m-\u001b[39m monitor_x_offset, \u001b[38;5;241m913\u001b[39m \u001b[38;5;241m-\u001b[39m monitor_y_offset, \u001b[38;5;241m1\u001b[39m,  button\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleft\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'monitor_x_offset' is not defined"
+      "Navigating to Home\n",
+      "Navigating to Site One Alpha\n",
+      "scanning...\n",
+      "Cargo 0.00\n",
+      "starting 2x...\n",
+      "started...\n",
+      "Cargo 0.00\n",
+      "skipping...\n",
+      "Cargo 0.06\n",
+      "starting 2x...\n",
+      "started...\n",
+      "Cargo 0.06\n",
+      "skipping...\n",
+      "Cargo 0.12\n",
+      "starting 2x...\n",
+      "started...\n",
+      "Cargo 0.14\n",
+      "skipping...\n",
+      "Cargo 0.20\n",
+      "skipping...\n",
+      "Cargo 0.26\n",
+      "starting 2x...\n",
+      "started...\n"
      ]
     }
    ],
@@ -265,15 +276,17 @@
     "    find_Mining_spot()\n",
     "    mine_till_full()\n",
     "    \n",
-    "    pyautogui.moveTo(get_processed_cords(300,626))\n",
+    "    pyautogui.moveTo(get_processed_cords(300, 626))\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.dragTo(get_processed_cords(790,913), 1,  button='left')\n",
+    "    x, y = get_processed_cords(790, 913)\n",
+    "    pyautogui.dragTo(x, y, 1,  button='left')\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.moveTo(get_processed_cords(336,672))\n",
+    "    pyautogui.moveTo(get_processed_cords(336, 672))\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.dragTo(get_processed_cords(182,811), 1,  button='left')\n",
+    "    x, y = get_processed_cords(182, 811)\n",
+    "    pyautogui.dragTo(x, y, 1,  button='left')\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.moveTo(get_processed_cords(1757,378))\n",
+    "    pyautogui.moveTo(get_processed_cords(1757, 378))\n",
     "    time.sleep(0.1)\n",
     "    pyautogui.click(button='left')\n",
     "\n",
