--- a/Experiment/extract_test.ipynb
+++ b/Experiment/extract_test.ipynb
@@ -144,45 +144,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "96b3e742-41b1-441f-acce-db8cd3261b67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Navigating to Site One Alpha\n",
-      "scanning...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Site One Alpha'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "find_Mining_spot()"
+    "#find_Mining_spot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "867c81e7-6653-4d3d-92f3-9801b6c7b58a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mine_till_full():\n",
+    "    field_depleted = False\n",
     "    while True:\n",
     "        cargo_percent = game.get_cargo_data(refresh_screen=True)\n",
     "        print(f'Cargo {cargo_percent:.2f}')\n",
-    "        if cargo_percent > 0.9:\n",
+    "        if cargo_percent > 0.9 or field_depleted:\n",
     "            target = 'Home'\n",
     "            location_df = game.get_location_data(refresh_screen=True)\n",
     "            print(f'Navigating to {target}')\n",
@@ -196,10 +178,15 @@
     "            pyautogui.click(button='left')\n",
     "            time.sleep(0.1)\n",
     "            pyautogui.moveTo(1, 1)\n",
-    "            time.sleep(60)\n",
+    "            time.sleep(180) # warning, docking can take some time.\n",
     "            break\n",
     "        scan_df = game.get_survey_scan_data(refresh_screen=True, extract_type='bool')\n",
-    "        snap_df = scan_df[scan_df['Quantity'] == True][0:2]\n",
+    "        scan_df = scan_df[scan_df['Quantity'] == True]\n",
+    "        \n",
+    "        if len(scan_df) < 2:\n",
+    "            field_depleted = True\n",
+    "        \n",
+    "        snap_df = scan_df[0:2]\n",
     "        snap_df = snap_df[~snap_df['Locked'] == True]\n",
     "        indicies = snap_df.index\n",
     "        if len(indicies) == 2:\n",
@@ -229,7 +216,7 @@
     "            time.sleep(175)    \n",
     "        else:\n",
     "            print('skipping...')\n",
-    "            time.sleep(175)           "
+    "            time.sleep(30)           "
    ]
   },
   {
@@ -244,9 +231,26 @@
      "text": [
       "Navigating to Site One Alpha\n",
       "scanning...\n",
-      "Cargo 0.93\n",
+      "Cargo 0.04\n",
+      "starting 2x...\n",
+      "started...\n",
+      "Cargo 0.04\n",
+      "skipping...\n",
+      "Cargo 0.10\n",
+      "skipping...\n",
+      "Cargo 0.10\n",
+      "skipping...\n",
+      "Cargo 0.10\n",
+      "skipping...\n",
+      "Cargo 0.10\n",
+      "skipping...\n",
+      "Cargo 0.10\n",
+      "skipping...\n",
+      "Cargo 0.12\n",
       "Navigating to Home\n",
       "Navigating to Site One Alpha\n",
+      "scanning...\n",
+      "Navigating to Site Two Alpha\n",
       "scanning...\n",
       "Cargo 0.00\n",
       "starting 2x...\n",
@@ -254,20 +258,159 @@
       "Cargo 0.00\n",
       "skipping...\n",
       "Cargo 0.06\n",
-      "starting 2x...\n",
-      "started...\n",
+      "skipping...\n",
       "Cargo 0.06\n",
+      "skipping...\n",
+      "Cargo 0.06\n",
+      "skipping...\n",
+      "Cargo 0.06\n",
+      "skipping...\n",
+      "Cargo 0.06\n",
+      "skipping...\n",
+      "Cargo 0.12\n",
+      "skipping...\n",
+      "Cargo 0.12\n",
+      "skipping...\n",
+      "Cargo 0.12\n",
+      "skipping...\n",
+      "Cargo 0.12\n",
+      "skipping...\n",
+      "Cargo 0.12\n",
       "skipping...\n",
       "Cargo 0.12\n",
       "starting 2x...\n",
       "started...\n",
-      "Cargo 0.14\n",
+      "Cargo 0.18\n",
       "skipping...\n",
-      "Cargo 0.20\n",
+      "Cargo 0.24\n",
       "skipping...\n",
-      "Cargo 0.26\n",
+      "Cargo 0.24\n",
+      "skipping...\n",
+      "Cargo 0.24\n",
+      "skipping...\n",
+      "Cargo 0.24\n",
+      "skipping...\n",
+      "Cargo 0.24\n",
+      "skipping...\n",
+      "Cargo 0.30\n",
+      "skipping...\n",
+      "Cargo 0.30\n",
+      "skipping...\n",
+      "Cargo 0.30\n",
+      "skipping...\n",
+      "Cargo 0.30\n",
+      "skipping...\n",
+      "Cargo 0.30\n",
+      "skipping...\n",
+      "Cargo 0.30\n",
+      "skipping...\n",
+      "Cargo 0.33\n",
+      "skipping...\n",
+      "Cargo 0.33\n",
+      "skipping...\n",
+      "Cargo 0.33\n",
+      "skipping...\n",
+      "Cargo 0.33\n",
+      "skipping...\n",
+      "Cargo 0.33\n",
       "starting 2x...\n",
-      "started...\n"
+      "started...\n",
+      "Cargo 0.36\n",
+      "skipping...\n",
+      "Cargo 0.42\n",
+      "skipping...\n",
+      "Cargo 0.42\n",
+      "skipping...\n",
+      "Cargo 0.42\n",
+      "skipping...\n",
+      "Cargo 0.42\n",
+      "skipping...\n",
+      "Cargo 0.42\n",
+      "skipping...\n",
+      "Cargo 0.48\n",
+      "skipping...\n",
+      "Cargo 0.48\n",
+      "skipping...\n",
+      "Cargo 0.48\n",
+      "skipping...\n",
+      "Cargo 0.48\n",
+      "skipping...\n",
+      "Cargo 0.48\n",
+      "skipping...\n",
+      "Cargo 0.48\n",
+      "starting 2x...\n",
+      "started...\n",
+      "Cargo 0.53\n",
+      "skipping...\n",
+      "Cargo 0.60\n",
+      "skipping...\n",
+      "Cargo 0.60\n",
+      "skipping...\n",
+      "Cargo 0.60\n",
+      "skipping...\n",
+      "Cargo 0.60\n",
+      "skipping...\n",
+      "Cargo 0.60\n",
+      "skipping...\n",
+      "Cargo 0.66\n",
+      "skipping...\n",
+      "Cargo 0.66\n",
+      "skipping...\n",
+      "Cargo 0.66\n",
+      "skipping...\n",
+      "Cargo 0.66\n",
+      "skipping...\n",
+      "Cargo 0.66\n",
+      "skipping...\n",
+      "Cargo 0.66\n",
+      "skipping...\n",
+      "Cargo 0.69\n",
+      "skipping...\n",
+      "Cargo 0.69\n",
+      "skipping...\n",
+      "Cargo 0.69\n",
+      "skipping...\n",
+      "Cargo 0.69\n",
+      "skipping...\n",
+      "Cargo 0.69\n",
+      "starting 2x...\n",
+      "started...\n",
+      "Cargo 0.70\n",
+      "skipping...\n",
+      "Cargo 0.76\n",
+      "skipping...\n",
+      "Cargo 0.76\n",
+      "skipping...\n",
+      "Cargo 0.76\n",
+      "skipping...\n",
+      "Cargo 0.76\n",
+      "skipping...\n",
+      "Cargo 0.76\n",
+      "skipping...\n",
+      "Cargo 0.83\n",
+      "skipping...\n",
+      "Cargo 0.83\n",
+      "skipping...\n",
+      "Cargo 0.83\n",
+      "skipping...\n",
+      "Cargo 0.83\n",
+      "skipping...\n",
+      "Cargo 0.83\n",
+      "skipping...\n",
+      "Cargo 0.83\n",
+      "skipping...\n",
+      "Cargo 0.89\n",
+      "skipping...\n",
+      "Cargo 0.89\n",
+      "skipping...\n",
+      "Cargo 0.89\n",
+      "skipping...\n",
+      "Cargo 0.89\n",
+      "skipping...\n",
+      "Cargo 0.89\n",
+      "skipping...\n",
+      "Cargo 0.91\n",
+      "Navigating to Home\n"
      ]
     }
    ],
