--- a/Experiment/extract_test.ipynb
+++ b/Experiment/extract_test.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "from MiningBot.EveInterface.Interface import Interface\n",
     "import json, time\n",
-    "import pyautogui"
+    "import pyautogui\n"
    ]
   },
   {
@@ -26,6 +26,14 @@
     "config = json.load(open(config_dir))\n",
     "game = Interface(config_dir=config_dir)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcb22b1b-bc40-4885-ba5d-2f574fd09045",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -231,186 +239,11 @@
      "text": [
       "Navigating to Site One Alpha\n",
       "scanning...\n",
-      "Cargo 0.04\n",
-      "starting 2x...\n",
-      "started...\n",
-      "Cargo 0.04\n",
-      "skipping...\n",
-      "Cargo 0.10\n",
-      "skipping...\n",
-      "Cargo 0.10\n",
-      "skipping...\n",
-      "Cargo 0.10\n",
-      "skipping...\n",
-      "Cargo 0.10\n",
-      "skipping...\n",
-      "Cargo 0.10\n",
-      "skipping...\n",
-      "Cargo 0.12\n",
-      "Navigating to Home\n",
-      "Navigating to Site One Alpha\n",
-      "scanning...\n",
       "Navigating to Site Two Alpha\n",
       "scanning...\n",
       "Cargo 0.00\n",
       "starting 2x...\n",
-      "started...\n",
-      "Cargo 0.00\n",
-      "skipping...\n",
-      "Cargo 0.06\n",
-      "skipping...\n",
-      "Cargo 0.06\n",
-      "skipping...\n",
-      "Cargo 0.06\n",
-      "skipping...\n",
-      "Cargo 0.06\n",
-      "skipping...\n",
-      "Cargo 0.06\n",
-      "skipping...\n",
-      "Cargo 0.12\n",
-      "skipping...\n",
-      "Cargo 0.12\n",
-      "skipping...\n",
-      "Cargo 0.12\n",
-      "skipping...\n",
-      "Cargo 0.12\n",
-      "skipping...\n",
-      "Cargo 0.12\n",
-      "skipping...\n",
-      "Cargo 0.12\n",
-      "starting 2x...\n",
-      "started...\n",
-      "Cargo 0.18\n",
-      "skipping...\n",
-      "Cargo 0.24\n",
-      "skipping...\n",
-      "Cargo 0.24\n",
-      "skipping...\n",
-      "Cargo 0.24\n",
-      "skipping...\n",
-      "Cargo 0.24\n",
-      "skipping...\n",
-      "Cargo 0.24\n",
-      "skipping...\n",
-      "Cargo 0.30\n",
-      "skipping...\n",
-      "Cargo 0.30\n",
-      "skipping...\n",
-      "Cargo 0.30\n",
-      "skipping...\n",
-      "Cargo 0.30\n",
-      "skipping...\n",
-      "Cargo 0.30\n",
-      "skipping...\n",
-      "Cargo 0.30\n",
-      "skipping...\n",
-      "Cargo 0.33\n",
-      "skipping...\n",
-      "Cargo 0.33\n",
-      "skipping...\n",
-      "Cargo 0.33\n",
-      "skipping...\n",
-      "Cargo 0.33\n",
-      "skipping...\n",
-      "Cargo 0.33\n",
-      "starting 2x...\n",
-      "started...\n",
-      "Cargo 0.36\n",
-      "skipping...\n",
-      "Cargo 0.42\n",
-      "skipping...\n",
-      "Cargo 0.42\n",
-      "skipping...\n",
-      "Cargo 0.42\n",
-      "skipping...\n",
-      "Cargo 0.42\n",
-      "skipping...\n",
-      "Cargo 0.42\n",
-      "skipping...\n",
-      "Cargo 0.48\n",
-      "skipping...\n",
-      "Cargo 0.48\n",
-      "skipping...\n",
-      "Cargo 0.48\n",
-      "skipping...\n",
-      "Cargo 0.48\n",
-      "skipping...\n",
-      "Cargo 0.48\n",
-      "skipping...\n",
-      "Cargo 0.48\n",
-      "starting 2x...\n",
-      "started...\n",
-      "Cargo 0.53\n",
-      "skipping...\n",
-      "Cargo 0.60\n",
-      "skipping...\n",
-      "Cargo 0.60\n",
-      "skipping...\n",
-      "Cargo 0.60\n",
-      "skipping...\n",
-      "Cargo 0.60\n",
-      "skipping...\n",
-      "Cargo 0.60\n",
-      "skipping...\n",
-      "Cargo 0.66\n",
-      "skipping...\n",
-      "Cargo 0.66\n",
-      "skipping...\n",
-      "Cargo 0.66\n",
-      "skipping...\n",
-      "Cargo 0.66\n",
-      "skipping...\n",
-      "Cargo 0.66\n",
-      "skipping...\n",
-      "Cargo 0.66\n",
-      "skipping...\n",
-      "Cargo 0.69\n",
-      "skipping...\n",
-      "Cargo 0.69\n",
-      "skipping...\n",
-      "Cargo 0.69\n",
-      "skipping...\n",
-      "Cargo 0.69\n",
-      "skipping...\n",
-      "Cargo 0.69\n",
-      "starting 2x...\n",
-      "started...\n",
-      "Cargo 0.70\n",
-      "skipping...\n",
-      "Cargo 0.76\n",
-      "skipping...\n",
-      "Cargo 0.76\n",
-      "skipping...\n",
-      "Cargo 0.76\n",
-      "skipping...\n",
-      "Cargo 0.76\n",
-      "skipping...\n",
-      "Cargo 0.76\n",
-      "skipping...\n",
-      "Cargo 0.83\n",
-      "skipping...\n",
-      "Cargo 0.83\n",
-      "skipping...\n",
-      "Cargo 0.83\n",
-      "skipping...\n",
-      "Cargo 0.83\n",
-      "skipping...\n",
-      "Cargo 0.83\n",
-      "skipping...\n",
-      "Cargo 0.83\n",
-      "skipping...\n",
-      "Cargo 0.89\n",
-      "skipping...\n",
-      "Cargo 0.89\n",
-      "skipping...\n",
-      "Cargo 0.89\n",
-      "skipping...\n",
-      "Cargo 0.89\n",
-      "skipping...\n",
-      "Cargo 0.89\n",
-      "skipping...\n",
-      "Cargo 0.91\n",
-      "Navigating to Home\n"
+      "started...\n"
      ]
     }
    ],
