--- a/Experiment/Overlay.ipynb
+++ b/Experiment/Overlay.ipynb
@@ -13,6 +13,7 @@
     "\n",
     "import mss\n",
     "import mss.tools\n",
+    "import socket\n",
     "\n",
     "from MiningBot.EveInterface.Interface import Interface, get_cells, get_row_points, get_col_points"
    ]
@@ -25,7 +26,7 @@
    "outputs": [],
    "source": [
     "config_dir = r'../MiningBot/Configs/configs.json'\n",
-    "config = json.load(open(config_dir))"
+    "config = json.load(open(config_dir))[socket.gethostname()]"
    ]
   },
   {
@@ -44,13 +45,22 @@
     "def cell_dims_from_list(list_onbj):\n",
     "    return cell_dims(list_onbj[0], list_onbj[1], list_onbj[2], list_onbj[3])\n",
     "\n",
-    "def drawbox(top, left, bottom, right):\n",
+    "def drawbox(top, left, bottom, right, color = '#ff6600'):\n",
     "    global canvas\n",
     "    canvas.create_line(top, left, top, right,\n",
     "                   top, right, bottom, right,\n",
     "                   bottom, right, bottom, left,\n",
     "                   bottom, left, top, left,\n",
-    "                   fill=\"#ff6600\", width=1)"
+    "                   fill=color, width=1)\n",
+    "    \n",
+    "def draw_movement(top, left, bottom, right, color = '#ff6600'):\n",
+    "    global canvas\n",
+    "    canvas.create_line(top, left, bottom, right,\n",
+    "                   fill=color, width=1)\n",
+    "    \n",
+    "def draw_target(x, y, color = '#ff6600'):\n",
+    "    global canvas\n",
+    "    canvas.create_oval(x-10,y-10,x+10,y+10, fill=color, width=2)\n"
    ]
   },
   {
@@ -100,14 +110,18 @@
     "\n",
     "for i in cells.keys():\n",
     "    drawbox(*list(cell_dims_from_list(cells[i]))), \n",
-    "    \n",
-    "    \n",
+    "     \n",
     "y_range = get_row_points(config['locations_box'], 13)\n",
     "x_range = get_col_points(config['locations_box'], config['locations_box_columns'])\n",
     "cells = get_cells(x_range, y_range)\n",
     "\n",
     "for i in cells.keys():\n",
     "    drawbox(*list(cell_dims_from_list(cells[i]))), \n",
+    "    \n",
+    "drawbox(*config['click_and_drag_inv_box'], color='limegreen')\n",
+    "draw_movement(*config['click_and_drag_inv_line'], color='limegreen')\n",
+    "draw_target(*config['exit_hanger_target'], color='red')\n",
+    "draw_target(*config['scanner_button_target'], color='red')\n",
     "\n",
     "drawbox(*config['cargo_box'])\n",
     "drawbox(*config['locations_box'])\n",
