--- a/Experiment/extract_test.ipynb
+++ b/Experiment/extract_test.ipynb
@@ -114,7 +114,7 @@
     "            time.sleep(60)\n",
     "\n",
     "            print('scanning...')\n",
-    "            pyautogui.moveTo(get_processed_cords(config['scanner_button_x'], config['scanner_button_y']))\n",
+    "            pyautogui.moveTo(get_processed_cords(*config['scanner_button_target']))\n",
     "            time.sleep(0.1)\n",
     "            pyautogui.click(button='left')\n",
     "            time.sleep(7)\n",
@@ -252,7 +252,7 @@
     "    find_Mining_spot()\n",
     "    mine_till_full()\n",
     "    \n",
-    "    pyautogui.moveTo(get_processed_cords(300, 626))\n",
+    "    pyautogui.moveTo(get_processed_cords(300, 626)) #\n",
     "    time.sleep(0.1)\n",
     "    x, y = get_processed_cords(790, 913)\n",
     "    pyautogui.dragTo(x, y, 1,  button='left')\n",
