--- a/Experiment/extract_test.ipynb
+++ b/Experiment/extract_test.ipynb
@@ -12,7 +12,8 @@
     "\n",
     "from MiningBot.EveInterface.Interface import Interface\n",
     "import json, time\n",
-    "import pyautogui\n"
+    "import pyautogui\n",
+    "import socket\n"
    ]
   },
   {
@@ -23,7 +24,7 @@
    "outputs": [],
    "source": [
     "config_dir = r'../MiningBot/Configs/configs.json'\n",
-    "config = json.load(open(config_dir))\n",
+    "config = json.load(open(config_dir))[socket.gethostname()]\n",
     "game = Interface(config_dir=config_dir)"
    ]
   },
@@ -237,13 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Navigating to Site One Alpha\n",
-      "scanning...\n",
-      "Navigating to Site Two Alpha\n",
-      "scanning...\n",
-      "Cargo 0.00\n",
-      "starting 2x...\n",
-      "started...\n"
+      "Navigating to Site One Alpha\n"
      ]
     }
    ],
@@ -252,17 +247,17 @@
     "    find_Mining_spot()\n",
     "    mine_till_full()\n",
     "    \n",
-    "    pyautogui.moveTo(get_processed_cords(300, 626)) #\n",
+    "    pyautogui.moveTo(get_processed_cords(*config['click_and_drag_inv_box'][2:4])) #\n",
     "    time.sleep(0.1)\n",
-    "    x, y = get_processed_cords(790, 913)\n",
+    "    x, y = get_processed_cords(*config['click_and_drag_inv_box'][0:2])\n",
     "    pyautogui.dragTo(x, y, 1,  button='left')\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.moveTo(get_processed_cords(336, 672))\n",
+    "    pyautogui.moveTo(get_processed_cords(*config['click_and_drag_inv_line'][0:2]))\n",
     "    time.sleep(0.1)\n",
-    "    x, y = get_processed_cords(182, 811)\n",
+    "    x, y = get_processed_cords(*config['click_and_drag_inv_line'][2:4])\n",
     "    pyautogui.dragTo(x, y, 1,  button='left')\n",
     "    time.sleep(0.1)\n",
-    "    pyautogui.moveTo(get_processed_cords(1757, 378))\n",
+    "    pyautogui.moveTo(get_processed_cords(*config['exit_hanger_target']))\n",
     "    time.sleep(0.1)\n",
     "    pyautogui.click(button='left')\n",
     "\n",
@@ -271,8 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fb6ebe13-fa5b-45af-8c67-70cf93848a90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bd763d8-7573-49fa-a75c-ae39ed727b04",
    "metadata": {},
    "outputs": [],
    "source": []
