--- a/Experiment/extract_test.ipynb
+++ b/Experiment/extract_test.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mining_sites = ['Site One Alpha', 'Site Two Alpha', 'Site Three Alpha']\n",
+    "mining_sites = config['mining_sites']\n",
     "def find_Mining_spot(keep_finding = True):\n",
     "    location_df = game.get_location_data(refresh_screen=True)\n",
     "    while True:\n",
